<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_searchfragment"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/searchbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingLeft="11dp"
        android:paddingRight="11dp"
        android:paddingTop="14dp" >

        <EditText
            android:id="@+id/searchEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/search_bar_bg"
            android:hint="@string/search_fragment_hint"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <LinearLayout
            android:id="@+id/selectorBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/level1Spinner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/bg_spinner"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/level2Spinner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_spinner"
                android:prompt="@string/prompt_level2"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/level3Spinner"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:background="@drawable/bg_spinner"
               	android:prompt="@string/prompt_level3"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button_selector_search" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/resultlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="3dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="3dp" >

        <RelativeLayout
            android:id="@+id/resultbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/result_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/search_result"
                android:textColor="@color/search_result"
                android:textSize="14sp"/>
            
            <TextView
                android:id="@+id/result_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="7dp"
                android:text="@string/result_num"
                android:textColor="@color/search_num"
                android:textSize="14sp"/>
        </RelativeLayout>
        
        <ListView 
            android:id="@+id/searchList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none"
            android:divider="#00000000"
            android:dividerHeight="4dp"/>
        
    </LinearLayout>

</LinearLayout>